<resources>
    <string name="app_name">MyWiFi</string>
    <string name="app_version">Version 1.0</string>

    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>

    <!-- navigation drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_places">Places</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_other">Other</string>

    <!-- toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item></item> <!-- No Title for Home Fragment -->
        <item>Places</item>
        <item>Settings</item>
    </string-array>

    <!-- menu action titles -->
    <string name="home_add_menu">Add Place</string>

    <!-- Home Fragment -->
    <string name="geofencing_on">Disconnect</string>
    <string name="geofencing_off">Connect</string>
    <string name="geofencing_key">geofencing</string>
    <string name="geofencing_time_key">geofencing_time</string>
    <string name="countdown_key">countdown</string>

    <string name="need_places_toast">Add a place first!</string>

    <!-- Places Fragment -->
    <string name="empty_view_text">Start adding places!</string>

    <string name="place_delete_toast">Place Deleted</string>
    <string name="place_add_toast">Place Added</string>
    <string name="need_network_toast">Need internet connection to add places</string>
    <string name="need_location_permission_toast">Please enable location permission</string>

    <!-- Settings Preference Fragment-->
    <string name="summary_off">Disabled</string>
    <string name="summary_on">Enabled</string>
    <string name="location_preference_title">Location Access</string>
    <string name="location_preference_key">preference_location</string>
    <string name="notifications_preference_title">Notifications</string>
    <string name="notifications_preference_key">preference_notifications</string>
    <string name="wifi_preference_title">WiFi Access</string>
    <string name="wifi_preference_key">preference_wifi</string>

    <!-- Notifications -->
    <string name="wifi_enabled_notification_title">WiFi ON</string>
    <string name="wifi_enabled_notification_text">MyWiFi has turned on your WiFi.</string>
    <string name="wifi_denied_notification_title">WiFi OFF</string>
    <string name="wifi_denied_notification_text">Turn on your WiFi?</string>

    <!-- Contact Us Activity -->
    <string name="contact_us_label">Contact Us</string>
    <string name="email_text">Send an Email</string>
    <string name="facebook_text">Like us on Facebook</string>
    <string name="github_text">Follow us on Github</string>
    <string name="playstore_text">Rate us on Playstore</string>

    <!-- Privacy Policy Activity -->
    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="google_location_policy">Google Location Policy</string>
    <string name="google_location_policy_text">
        When you use Google services, we may collect and process information about your actual location. We use various technologies to determine location, including IP address, GPS, and other sensors that may, for example, provide Google with information on nearby devices, Wi-Fi access points and cell towers.
    </string>
    <string name="privacy_policy_link">Read More</string>

    <!-- Admob -->
    <string name="admob_app_id">ca-app-pub-4336412680099916~7325799525</string>
    <string name="home_banner_unit_id">ca-app-pub-4336412680099916/9349327639</string>

</resources>
