<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/location_preference_title"
        android:key="@string/location_preference_key"
        android:defaultValue="false"
        android:summaryOn="@string/summary_on"
        android:summaryOff="@string/summary_off" />

    <CheckBoxPreference
        android:title="@string/notifications_preference_title"
        android:key="@string/notifications_preference_key"
        android:defaultValue="true"
        android:summaryOn="@string/summary_on"
        android:summaryOff="@string/summary_off" />

    <CheckBoxPreference
        android:title="@string/wifi_preference_title"
        android:key="@string/wifi_preference_key"
        android:defaultValue="true"
        android:summaryOn="@string/summary_on"
        android:summaryOff="@string/summary_off" />

</PreferenceScreen>