<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_black"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/place_black"
            android:title="@string/nav_places" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_black"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:title="@string/nav_contact_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/nav_privacy_policy" />
        </menu>
    </item>
</menu>